objects/Server_Deployment__c/fields/Server_Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Server_Device_Type__c</fullName>
    <description>2014-10-14 | JR
2020-08-26 Case 54755 Sophie Xu requested label and help text change</description>
    <inlineHelpText>Indicate whether the application server is installed to a physical or virtual device, for license key purpose.</inlineHelpText>
    <label>Infrastructure-License Key Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Prem</fullName>
            </value>
            <value>
                <fullName>Tanium Cloud for U.S. Government</fullName>
            </value>
            <value>
                <fullName>Tanium as a Service</fullName>
                <label>Tanium Cloud</label>
            </value>
            <value>
                <fullName>? object:null ?</fullName>
                <isActive>false</isActive>
                <label>? object:null ?</label>
            </value>
            <value>
                <fullName>Appliance</fullName>
                <isActive>false</isActive>
                <label>Appliance</label>
            </value>
            <value>
                <fullName>Chronical</fullName>
                <isActive>false</isActive>
                <label>Chronical</label>
            </value>
            <value>
                <fullName>Chronicle</fullName>
                <isActive>false</isActive>
                <label>Chronicle</label>
            </value>
            <value>
                <fullName>Cloud</fullName>
                <isActive>false</isActive>
                <label>Cloud</label>
            </value>
            <value>
                <fullName>Customer  - Physical</fullName>
                <isActive>false</isActive>
                <label>Customer - Physical</label>
            </value>
            <value>
                <fullName>Customer - Physical</fullName>
                <isActive>false</isActive>
                <label>Customer - Physical</label>
            </value>
            <value>
                <fullName>Customer - Virtual</fullName>
                <isActive>false</isActive>
                <label>Customer - Virtual</label>
            </value>
            <value>
                <fullName>Customer</fullName>
                <isActive>false</isActive>
                <label>Customer Provided</label>
            </value>
            <value>
                <fullName>Customer Provided</fullName>
                <isActive>false</isActive>
                <label>Customer Provided</label>
            </value>
            <value>
                <fullName>Customer Provided - Physical</fullName>
                <isActive>false</isActive>
                <label>Customer Provided - Physical</label>
            </value>
            <value>
                <fullName>Customer Provided - Virtual</fullName>
                <isActive>false</isActive>
                <label>Customer Provided - Virtual</label>
            </value>
            <value>
                <fullName>Physical</fullName>
                <isActive>false</isActive>
                <label>Physical</label>
            </value>
            <value>
                <fullName>Tanium - Cloud</fullName>
                <isActive>false</isActive>
                <label>Tanium - Cloud</label>
            </value>
            <value>
                <fullName>Tanium - Cloud Appliance</fullName>
                <isActive>false</isActive>
                <label>Tanium - Cloud Appliance</label>
            </value>
            <value>
                <fullName>Tanium - Physical</fullName>
                <isActive>false</isActive>
                <label>Tanium - Physical</label>
            </value>
            <value>
                <fullName>Tanium - Physical Appliance</fullName>
                <isActive>false</isActive>
                <label>Tanium - Physical Appliance</label>
            </value>
            <value>
                <fullName>Tanium - Virtual</fullName>
                <isActive>false</isActive>
                <label>Tanium - Virtual</label>
            </value>
            <value>
                <fullName>Tanium - Virtual Appliance</fullName>
                <isActive>false</isActive>
                <label>Tanium - Virtual Appliance</label>
            </value>
            <value>
                <fullName>Tanium - Virtual Appliance (OVA)</fullName>
                <isActive>false</isActive>
                <label>Tanium - Virtual Appliance (OVA)</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
                <isActive>false</isActive>
                <label>Virtual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>