objects/Server_Deployment__c/fields/Server_Hostnames__c.field-meta.xml
<CustomField>
    <fullName>Server_Hostnames__c</fullName>
    <description>Server/hostnames should be comma delimited</description>
    <inlineHelpText>Server/hostnames should be comma delimited</inlineHelpText>
    <label>Server Hostnames</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>