objects/Server_Deployment__c/fields/Server_Model_Manufacturer_Brand__c.field-meta.xml
<CustomField>
    <fullName>Server_Model_Manufacturer_Brand__c</fullName>
    <label>Server Model (Manufacturer / Brand)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>