objects/Server_Deployment__c/fields/Server_OS__c.field-meta.xml
<CustomField>
    <fullName>Server_OS__c</fullName>
    <inlineHelpText>Enter full name of the operating system installed to the application server, including Release and Service Pack levels when known, for example:  Windows Server 2012 R2, Windows Server 2008 R2 Service Pack 1, etc.</inlineHelpText>
    <label>Server OS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Windows Server 2012 R2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2012</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008 R2</fullName>
            </value>
            <value>
                <fullName>Windows Server 2008</fullName>
            </value>
            <value>
                <fullName>Windows Server 2003</fullName>
            </value>
            <value>
                <fullName>Windows Server 2016</fullName>
            </value>
            <value>
                <fullName>Windows Server 2019</fullName>
            </value>
            <value>
                <fullName>TanOS 1.0.0-418</fullName>
            </value>
            <value>
                <fullName>TanOS 1.0.0-365</fullName>
            </value>
            <value>
                <fullName>TanOS 1.0.0-420</fullName>
            </value>
            <value>
                <fullName>TanOS 1.2.0</fullName>
            </value>
            <value>
                <fullName>TanOS 1.2.1</fullName>
            </value>
            <value>
                <fullName>TanOS 1.3.0</fullName>
            </value>
            <value>
                <fullName>TanOS 1.3.1</fullName>
            </value>
            <value>
                <fullName>TanOS 1.3.2</fullName>
            </value>
            <value>
                <fullName>TanOS 1.3.3</fullName>
            </value>
            <value>
                <fullName>TanOS 1.3.4</fullName>
            </value>
            <value>
                <fullName>TanOS 1.4.0</fullName>
            </value>
            <value>
                <fullName>TanOS 1.5.0</fullName>
                <label>TANOS 1.5.0</label>
            </value>
            <value>
                <fullName>TanOS 1.5.1</fullName>
                <label>TANOS 1.5.1</label>
            </value>
            <value>
                <fullName>TanOS 1.5.2</fullName>
                <label>TANOS 1.5.2</label>
            </value>
            <value>
                <fullName>TanOS 1.5.3</fullName>
                <label>TANOS 1.5.3</label>
            </value>
            <value>
                <fullName>TanOS 1.5.4</fullName>
                <label>TANOS 1.5.4</label>
            </value>
            <value>
                <fullName>TanOS 1.5.5</fullName>
                <label>TANOS 1.5.5</label>
            </value>
            <value>
                <fullName>TanOS 1.5.6</fullName>
            </value>
            <value>
                <fullName>TanOS 1.6.0</fullName>
            </value>
            <value>
                <fullName>TanOS 1.6.1</fullName>
            </value>
            <value>
                <fullName>TanOS 1.6.2</fullName>
            </value>
            <value>
                <fullName>TanOS 1.6.3</fullName>
            </value>
            <value>
                <fullName>TanOS 1.6.4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>