objects/Server_Deployment__c/fields/Server_Version__c.field-meta.xml
<CustomField>
    <fullName>Server_Version__c</fullName>
    <inlineHelpText>Any time you interact with a customer, note the server Build Number reported on the Console&apos;s &quot;Administration&quot; tab and enter that value in this field.</inlineHelpText>
    <label>Server Version</label>
    <length>32</length>
    <type>Text</type>
</CustomField>