objects/Server_Deployment__c/fields/SQL_Server_Version__c.field-meta.xml
<CustomField>
    <fullName>SQL_Server_Version__c</fullName>
    <description>The version of SQL Server (e.g., &quot;SQL Server 2008R2 Express&quot;</description>
    <inlineHelpText>Enter full name of the database software, including Release and Service Pack levels when known, for example:  
SQL Server 2008 R2 Express, SQL Server 2012 SP2, etc.</inlineHelpText>
    <label>SQL Server Version</label>
    <length>30</length>
    <type>Text</type>
</CustomField>