objects/Server_Deployment__c/fields/SSL_Certificate__c.field-meta.xml
<CustomField>
    <fullName>SSL_Certificate__c</fullName>
    <description>2014-10-23 JR | Added to track whether customer is using a Self-signed SSL certificate to secure the console communication.</description>
    <inlineHelpText>Select &quot;Self-signed&quot; if the server uses the default self-signed SSL cert; otherwise, choose &quot;Certificate Authority Signed&quot; if the SSL certificate is signed by either the customer&apos;s internal certificate signing authority or an external CA such as VeriSign.</inlineHelpText>
    <label>SSL Certificate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self-signed</fullName>
            </value>
            <value>
                <fullName>Certificate Authority Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>