objects/Server_Deployment__c/fields/Staging_Record__c.field-meta.xml
<CustomField>
    <fullName>Staging_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is a link to the staging record that was used to create and/or update this Server Deployment. You can use this link to see the payload of the update record.</inlineHelpText>
    <label>Staging Record</label>
    <referenceTo>STG_Server_Deployment__c</referenceTo>
    <relationshipLabel>Server Deployments</relationshipLabel>
    <relationshipName>Server_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>