objects/Server_Deployment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Indicates the status (active vs inactive) of this server deployment.
2020-09-01 Duyen added help text to indicate field is required.</description>
    <inlineHelpText>Status is a required field: Indicates the status (active vs inactive) of this server deployment. 
When Status is &quot;Active&quot;, License Delivery Email, Server Version, Server OS, and Tanium Infrastructure are required.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>