objects/Server_Deployment__c/fields/Successfully_Deployed_Seats_Number__c.field-meta.xml
<CustomField>
    <fullName>Successfully_Deployed_Seats_Number__c</fullName>
    <formula>value( text(Successfully_Deployed_Seats__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Successfully Deployed Seats Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>