objects/Server_Deployment__c/fields/TaaS_Admin_email__c.field-meta.xml
<CustomField>
    <fullName>TaaS_Admin_email__c</fullName>
    <description>This field has been replaced by Tanium Cloud Admin and is being deprecated. Jira ticket SS-8429</description>
    <inlineHelpText>This field has been deprecated. Please use the Tanium Cloud Admin to select an administrative contact for this Server Deployment</inlineHelpText>
    <label>DEPRECATED - Tanium Cloud Admin Email</label>
    <type>Email</type>
</CustomField>