objects/Server_Deployment__c/fields/TaaS_Region__c.field-meta.xml
<CustomField>
    <fullName>TaaS_Region__c</fullName>
    <description>Case 56132 Sophie Xu, Mo Patel:  Move TaaS fields from Opp to Server Deployment</description>
    <label>DEPRECATED - Cloud Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US-West-2</fullName>
                <default>true</default>
                <label>US-West-2</label>
            </value>
            <value>
                <fullName>us-gov-west-1 (United States)</fullName>
            </value>
            <value>
                <fullName>AP-Northeast-1 (Japan)</fullName>
            </value>
            <value>
                <fullName>EU-Central-1 (Germany)</fullName>
            </value>
            <value>
                <fullName>ap-southeast-2 (Australia)</fullName>
            </value>
            <value>
                <fullName>eu-west-2 (England)</fullName>
            </value>
            <value>
                <fullName>sa-east-1 (Brazil)</fullName>
            </value>
            <value>
                <fullName>ca-central-1 (Canada)</fullName>
            </value>
            <value>
                <fullName>AP-Northeast-1 (Tokyo)</fullName>
                <isActive>false</isActive>
                <label>AP-Northeast-1 (Tokyo)</label>
            </value>
            <value>
                <fullName>EU-Central-1 (Frankfurt)</fullName>
                <isActive>false</isActive>
                <label>EU-Central-1 (Frankfurt)</label>
            </value>
            <value>
                <fullName>US-West-2 (Oregon)</fullName>
                <isActive>false</isActive>
                <label>US-West-2 (Oregon)</label>
            </value>
            <value>
                <fullName>US-West-2 (United States)</fullName>
                <isActive>false</isActive>
                <label>US-West-2 (United States)</label>
            </value>
            <value>
                <fullName>ap-southeast-1 (Singapore)</fullName>
                <isActive>false</isActive>
                <label>ap-southeast-1 (Singapore)</label>
            </value>
            <value>
                <fullName>ap-southeast-2 (Sydney)</fullName>
                <isActive>false</isActive>
                <label>ap-southeast-2 (Sydney)</label>
            </value>
            <value>
                <fullName>au (Australia)</fullName>
                <isActive>false</isActive>
                <label>au (Australia)</label>
            </value>
            <value>
                <fullName>br (Brazil)</fullName>
                <isActive>false</isActive>
                <label>br (Brazil)</label>
            </value>
            <value>
                <fullName>ca (Canada)</fullName>
                <isActive>false</isActive>
                <label>ca (Canada)</label>
            </value>
            <value>
                <fullName>de (Germany)</fullName>
                <isActive>false</isActive>
                <label>de (Germany)</label>
            </value>
            <value>
                <fullName>gb (England)</fullName>
                <isActive>false</isActive>
                <label>gb (England)</label>
            </value>
            <value>
                <fullName>gov (United States)</fullName>
                <isActive>false</isActive>
                <label>gov (United States)</label>
            </value>
            <value>
                <fullName>jp (Japan)</fullName>
                <isActive>false</isActive>
                <label>jp (Japan)</label>
            </value>
            <value>
                <fullName>us (United States)</fullName>
                <isActive>false</isActive>
                <label>us (United States)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>