objects/Server_Deployment__c/fields/Tanium_Cloud_Admin__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Cloud_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the customer contact who will serve as the admin for this deployment</inlineHelpText>
    <label>Tanium Cloud Admin</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>Tanium Cloud Admin must be active and Its Account must be equal to the Server Deployment Account</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>contains</operation>
            <value>API Integration</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Server Deployments</relationshipLabel>
    <relationshipName>Server_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>