objects/Server_Deployment__c/fields/Tanium_Cloud_Internal_Slack_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Cloud_Internal_Slack_Channel_ID__c</fullName>
    <description>SS-619:Reference-able field by Order Ops / Licensing team for where to configure the TaaS/Cloud Provisioner to send instance updates and alerts to the designated Slack channel ID.</description>
    <inlineHelpText>This is where TaaS updates alerts get sent. Different from the Customer Slack Channel</inlineHelpText>
    <label>Tanium Cloud Internal Slack Channel ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>