objects/Server_Deployment__c/fields/Tanium_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Tanium_Infrastructure__c</fullName>
    <description>2020-08-26 Case 54755 Sophie Xu requested label and help text change</description>
    <inlineHelpText>For TAM Reporting purposes</inlineHelpText>
    <label>Tanium Infrastructure-TAM Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud Template – AWS</fullName>
            </value>
            <value>
                <fullName>Cloud Template – Azure</fullName>
            </value>
            <value>
                <fullName>Tanium as a Service</fullName>
                <label>Tanium Cloud</label>
            </value>
            <value>
                <fullName>Tanium – Physical Appliance</fullName>
            </value>
            <value>
                <fullName>Tanium - Virtual Appliance</fullName>
            </value>
            <value>
                <fullName>Tanium – Cloud Appliance</fullName>
            </value>
            <value>
                <fullName>Windows – Virtual</fullName>
            </value>
            <value>
                <fullName>Windows – Physical</fullName>
            </value>
            <value>
                <fullName>Windows – Cloud</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
                <isActive>false</isActive>
                <label>Cloud</label>
            </value>
            <value>
                <fullName>Physical</fullName>
                <isActive>false</isActive>
                <label>Physical</label>
            </value>
            <value>
                <fullName>Tanium – Virtual Appliance (OVA)</fullName>
                <isActive>false</isActive>
                <label>Tanium – Virtual Appliance (OVA)</label>
            </value>
            <value>
                <fullName>Virtual</fullName>
                <isActive>false</isActive>
                <label>Virtual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>