objects/Server_Deployment__c/fields/Technical_Win__c.field-meta.xml
<CustomField>
    <fullName>Technical_Win__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Click &quot;Technical Win Achieved&quot; once the prospect indicates there are no technical open issues or &quot;deal breakers&quot; to prevent the deal from closing.</description>
    <label>Technical Win Achieved</label>
    <type>Checkbox</type>
</CustomField>