objects/Server_Deployment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Track the purpose of this server deployment within the organization&apos;s change management process.</description>
    <inlineHelpText>-Production: intended for live environment, does not allow unsigned content
-Lab: testing license, includes labs content and allows unsigned content
-QA: testing license that mirrors prod, no labs content and no unsigned content, Limited use</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>POC/Pilot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>