objects/Server_Deployment__c/fields/Vanity_URL__c.field-meta.xml
<CustomField>
    <fullName>Vanity_URL__c</fullName>
    <description>Case 56132 Sophie Xu, Mo Patel:  Move TaaS fields from Opp to Server Deployment</description>
    <inlineHelpText>Vanity should typically be the customer name and will be in the link to the Tanium Cloud instance:
[vanity].cloud.tanium.com, for example
abccompany.cloud.tanium.com (USG: abccompany.cloud.taniumfed.com). Please enter only the vanity portion in this field.
Do not include values with &quot;poc&quot; or &quot;test&quot; in the vanity
Alphanumeric text ONLY. No special characters besides hyphen are allowed.</inlineHelpText>
    <label>Vanity</label>
    <type>TextArea</type>
</CustomField>