objects/Server_Deployment__c/fields/Weekly_Active_Users__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Active_Users__c</fullName>
    <description>DET-173 Telemetry fields. These values originate from the User Analytics platform, are ingested into Snowflake and pushed to Salesforce via Workato.</description>
    <inlineHelpText>The number of weekly active users logged into the Tanium Cloud platform as measured by the User Analytics tool for Tanium Cloud.</inlineHelpText>
    <label>Weekly Active Users</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>