objects/Server_Deployment__c/recordTypes/OnPrem.recordType-meta.xml
<RecordType>
    <fullName>OnPrem</fullName>
    <active>true</active>
    <label>On-Prem</label>
</RecordType>