objects/Server_Deployment__c/recordTypes/TaaS.recordType-meta.xml
<RecordType>
    <fullName>TaaS</fullName>
    <active>true</active>
    <label>Tanium Cloud</label>
</RecordType>