objects/Server_Deployment__c/validationRules/Cloud_Provider_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Cloud_Provider_Validation</fullName>
    <active>false</active>
    <description>SS-4495 - Validate the cloud provider values and enforce when they need to be completed.
5/29/2024 SS-8288 - Deactivate this VR.</description>
    <errorConditionFormula>((TEXT(Server_Device_Type__c) = &quot;Tanium Cloud for U.S. Government&quot; &amp;&amp; TEXT(Cloud_Provider__c) != &quot;AWS&quot;))
&amp;&amp;
NOT($Permission.DisableValidationRules)</errorConditionFormula>
    <errorMessage>Cloud Provider must be &quot;AWS&quot; if the License Key Function is &quot;Tanium Cloud for U.S. Government&quot;.</errorMessage>
</ValidationRule>