objects/Server_Deployment__c/validationRules/Email_address_type_allowed_in_records.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_address_type_allowed_in_records</fullName>
    <active>true</active>
    <description>SS-839
SS-1116</description>
    <errorConditionFormula>AND(
OR(
CONTAINS(License_delivery_email_primary__c,&apos;tanium.com&apos;),
CONTAINS(License_delivery_email_secondary__c,&apos;tanium.com&apos;)),
RecordType.DeveloperName =&apos;OnPrem&apos;,
NOT($Profile.Name=&quot;API Only Integration Admin&quot;),
NOT($Permission.DisableValidationRules))</errorConditionFormula>
    <errorMessage>Cannot use Tanium Email for OnPrem</errorMessage>
</ValidationRule>